[tool.poetry]
name = "mysql-tools"
version = "0.0.1"
description = "Tools for MySQL RDS and Aurora instances"
authors = ["Your Name <you@example.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"
mysqlclient = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
